Port remaining progression package classes